--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "composer-plugin-api": "^1.0 || ^2.0",
         "composer/installers": "^1.2",
-        "symfony/yaml": "~3.0|^4.4",
+        "symfony/yaml": "~3.0 || ^4.4 || ^5.4 || ^6.0",
         "symfony/finder": "~3.0 || ^4.4 || ^5.4 || ^6.0"
     },
     "minimum-stability": "dev",
